--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -55,7 +55,7 @@ http {
 	resolver 1.1.1.1 1.0.0.1 8.8.8.8 8.8.4.4 9.9.9.9 208.67.222.222 208.67.220.220 valid=60s;
 	resolver_timeout 2s;
 
-	# load configs
+	# Load configs
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
 }
