--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -45,15 +45,15 @@ http {
     ##
     # Optimize Session Cache
     ##
-    ssl_session_timeout 1d;
+    ssl_session_timeout 10m;
     ssl_session_cache shared:SSL:10m;
     ssl_session_tickets off;
 
 	# OCSP Stapling
 	ssl_stapling on;
 	ssl_stapling_verify on;
-	resolver 1.1.1.1 1.0.0.1 8.8.8.8 8.8.4.4 9.9.9.9 208.67.222.222 208.67.220.220 valid=60s;
-	resolver_timeout 2s;
+	resolver 1.1.1.1 1.0.0.1 8.8.8.8 8.8.4.4 9.9.9.9 208.67.222.222 208.67.220.220 valid=300s;
+	resolver_timeout 3s;
 
 	# Load configs
 	include /etc/nginx/conf.d/*.conf;
