--- a/conf/security.conf
+++ b/conf/security.conf
@@ -1,7 +1,7 @@
 ##
 # Security Headers
 ##
-#add_header X-Frame-Options "SAMEORIGIN" always;
+add_header X-Frame-Options "DENY" always;
 add_header X-XSS-Protection "1; mode=block" always;
 add_header X-Content-Type-Options "nosniff" always;
 add_header Referrer-Policy "no-referrer-when-downgrade" always;
